flex-container-mingap mobile fixed modal close button

--- a/css/dynamic_lightbox.css
+++ b/css/dynamic_lightbox.css
@@ -174,3 +174,12 @@ img.hover-shadow {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   border-radius: 1rem;
 }
+
+@media screen and (max-width: 900px) {
+
+.close {
+  position: absolute;
+  top: 25px;
+  right: 25px;
+}
+}
